[project]
name = "gringo"
version = "0.1.0"
description = "A Python project"
authors = [
    {name = "OpenHands", email = "openhands@all-hands.dev"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]