[project]
name = "gringo"
version = "0.1.0"
description = "A Python project"
authors = [
    {name = "OpenHands", email = "openhands@all-hands.dev"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["gringo/tests"]
python_files = ["test_*.py"]